--- a/app/assets/stylesheets/components/_dashboards.scss
+++ b/app/assets/stylesheets/components/_dashboards.scss
@@ -60,6 +60,10 @@
   text-align: center;
 }
 
+.show-report-title {
+  margin-bottom: 50px;
+}
+
 .sub-title {
   margin-top: 20px;
   margin-bottom: 20px;
