--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -4,7 +4,7 @@
   border-bottom: solid 1px #0C2556;
   background-color: white;
   padding: 15px;
-  width: 85%;
+  width: 85vw;
   position: fixed;
   right: 0;
   top: 0;
