--- a/app/assets/stylesheets/components/_utilities.scss
+++ b/app/assets/stylesheets/components/_utilities.scss
@@ -1,5 +1,5 @@
 .ml200 {
-  margin-left: 200px;
+  margin-left: 15vw;
 }
 
 .ml50 {
@@ -36,7 +36,7 @@
 }
 
 .pr-40 {
-  padding-right: 40px
+  padding-right: 40px;
 }
 
 .mt100{
