--- a/app/views/shared/_side-nav.html.erb
+++ b/app/views/shared/_side-nav.html.erb
@@ -32,10 +32,10 @@
       <% end %>
     </p>
 
-    <div>
+    <div class="separator">
       <p>
         <%= link_to edit_user_registration_path do %>
-          <i class="fas fa-user-edit pr-10"></i> Edit profile
+          <i class="fas fa-user-edit pr-10 line"></i> Edit profile
         <% end %>
       </p>
       <p>
