--- a/app/views/shared/_tabs.html.erb
+++ b/app/views/shared/_tabs.html.erb
@@ -3,7 +3,7 @@
 
     <div class="col-lg">
       <div class="tab-title">
-        <h4> <strong class="highlight"><%=section.to_s.capitalize %></strong></h1>
+        <h4> <strong class="highlight-blue"><%=section.to_s.capitalize %></strong></h1>
       </div>
     </div>
 
