--- a/app/views/treasuries/transactions.html.erb
+++ b/app/views/treasuries/transactions.html.erb
@@ -13,7 +13,7 @@
       class: "form-control mr-1",
       placeholder: "Search a date, an amount, a transaction..."
       %>
-      <%= submit_tag "Search", class: "btn btn-flat m-0" %>
+      <%= submit_tag "Search", class: "btn btn-flat-search m-0" %>
       <% end %>
     </div>
 
@@ -27,12 +27,12 @@
         <% @lines.each do |line| %>
           <div class="divRow d-flex justify-content-around">
           <div class="divCell"> <%= line.compte_lib %></div>
-          <div class="divCell"> <%= line.ecriture_date %></div>
+          <div class="divCell"> <%= line.ecriture_date %> </div>
 
           <% if line.debit == 0 %>
-            <div class="divCell">- <%= line.credit %> </div>
+            <div class="divCell">- <%= number_with_delimiter(line.credit.to_i, :delimiter => ',') %> €</div>
           <% else %>
-            <div class="divCell"><%= line.debit %> </div>
+            <div class="divCell"><%= number_with_delimiter(line.debit.to_i, :delimiter => ',') %> €</div>
           <% end %>
           </div>
         <% end %>
