--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -3,27 +3,15 @@
 <div class="container">
   <div class="container-index">
     <div class="row">
-      <div class="col-lg-12">
+      <div class="col-lg-4">
         <div class="card-dash">
-          <h1 class="main-title"><strong class="highlight">👋 Welcome to Decidesk !</strong></h1>
-          <h4 class="sub-title">Tired of Excel? Need to quickly understand your business? Well you've come to the right place. Load your FEC file below and let's get this party started!</h4>
-        </div>
-      </div>
-    </div>
- </div>
+          <h3 class="main-title"><strong class="highlight">👋 Welcome to Decidesk !</strong></h3>
+          <p>Tired of Excel? Need to quickly understand your business? Well you've come to the right place. Load your FEC file and let's get this party started!</p>
 
-    <div class="row">
-      <div class="col-lg-6">
-        <div class="card-home">
-          <%= image_tag ("idea.png") %>
-          <div class="card-home-infos">
-            <h3 class="text-center mb-5"><strong class="highlight">New to Decidesk?</strong></h3>
-            <p>Decidesk is designed to be as simple as possible to use. Simply upload a new report in CSV format using the form below 👇 or view a report that you've previously uploaded to visualize your data.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="card-dash h289">
+          <br>
+          <div class="dropdown-divider"></div>
+          <br>
+
           <h3 class="text-center mb-5"><strong class="highlight">Your activity on DeciDesk</strong></h3>
           <div class="row mt-3">
             <div class="col text-center"><h3><strong class="highlight-blue"><%= number_with_delimiter(@current_user.reports.all.count, :delimiter => ',') %></strong></h3></div>
@@ -35,34 +23,40 @@
           </div>
         </div>
       </div>
-    </div>
 
-
-    <div class="row">
       <div class="col">
         <div class="card-dash">
           <h3 class="text-center"><strong class="highlight">Upload a new FEC for analysis</strong></h3>
           <div>
             <%= render 'reports/form' %>
           </div>
-        </div>
-      </div>
-
-      <div class="col">
-        <div class="card-dash">
-          <h3 class="text-center"><strong class="highlight">Your previous analysis</strong></h3>
-          <% if @current_user.reports %>
-            <% @current_user.reports.all.each do |report| %>
-              <div class="divRow d-flex justify-content-around">
-                <p class="divCell"><%= report.name %></p>
-                <p class="divCell"><%= report.created_at.strftime("%b %Y") %></p>
-                <p class="divCell"><%= link_to "See details", report_path(report.id), class: "btn btn-small" %></p>
-              </div>
-            <% end %>
-          <% end %>
+          <br>
+          <div class="dropdown-divider"></div>
+          <br>
+          <p>
+            <p class="mt-3 mw" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+              Click here to see all reports 👇
+            </p>
+          </p>
+          <div class="collapse" id="collapseExample">
+            <div class="card-body justify-content-center">
+              <% if @current_user.reports %>
+                <% @current_user.reports.all.each do |report| %>
+                  <div class="divRow d-flex justify-content-around">
+                    <p class="divCell w200 text-left"><%= report.name %></p>
+                    <p class="divCell"><%= report.created_at.strftime("%b %Y") %></p>
+                    <p class="divCell">
+                      <%= link_to report_path(report.id) do %>
+                        <i class="fas fa-search"></i>
+                      <% end %>
+                    </p>
+                  </div>
+                <% end %>
+              <% end %>
+            </div>
+          </div>
         </div>
       </div>
     </div>
  </div>
 </div>
-
