--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,85 +1,90 @@
 <%= render 'shared/side-nav' %>
 
+<div class="container-decidesk">
+  <div class="container-index">
+    <div class="show-report-title">
+      <h1 class="main-title"><strong class="highlight">Report Analysis</strong></h1>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-3">
+        <h6>Name of the report : <strong><%= @report.name %></strong> </h6>
+      </div>
+      <div class="col-lg-3">
+        <h6>From : <strong><%= @report.lines.first.ecriture_date.strftime("%d %B %Y") %></strong></h6>
+      </div>
+      <div class="col-lg-3">
+        <h6>To: <strong> <%= @report.lines.treasury_last_day.ecriture_date.strftime("%d %B %Y")%></strong></h6>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-4">
+        <div class="cards-page">
+          <h4> Total <strong class="highlight">Treasury</strong></h4>
+          <h2> <strong class="highlight text-center"><%= number_with_delimiter(@treasury_balance.to_i, :delimiter => ',') %> € </strong></h2>
+          <div class="text-center"><%= link_to "See details", report_treasury_path(@report), class: "btn btn-bleu" %></div>
+        </div>
+      </div>      
+      <div class="col-4">
+        <div class="cards-page">
+          <h4>Total <strong class="highlight">Sales</strong></h4>
+          <h2> <strong class="highlight text-center"><%= number_with_delimiter(@total_sales.to_i, :delimiter => ',') %> € </strong></h2>
+          <div class="text-center"><%= link_to "See details", report_sales_path(@report), class: "btn btn-bleu" %></div>
+        </div>
+      </div>      
+      <div class="col-4">
+        <div class="cards-page">
+          <h4>Total <strong class="highlight">Expenditure</strong></h4>
+          <h2> <strong class="highlight text-center"> <%= number_with_delimiter(@total_expenditures.to_i, :delimiter => ',') %> € </strong></h2>
+          <div class="text-center"><%= link_to "See details", report_expenditures_path(@report), class: "btn btn-bleu" %></div>
+        </div>
+      </div>      
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="cards-page">
+          <h4><strong class="highlight-blue text-center">Main ratios</strong></h4>
+          <div class="row d-flex justify-content-center mt-3">
+            <div class="col text-center">
+              <% if @margin > 0 %>
+                <h3 class="text-success font-weight-bold"><%= number_to_percentage(@margin, precision: 2) %></h3>
+              <% else %>
+                <h3 class="text-danger font-weight-bold"><%= number_to_percentage(@margin, precision: 2) %></h3>
+              <% end %>
+            <h4>Margin</h4>
+            </div>
+            <div class="col text-center">
+              <% if @cash_ratio > 0 %>
+                <h3 class="text-success font-weight-bold"><%= number_to_percentage(@cash_ratio, precision: 2) %></h3>
+              <% else %>
+                <h3 class="text-danger font-weight-bold"><%= number_to_percentage(@cash_ratio, precision: 2) %></h3>
+              <% end %>
+                <h4>Cash to expenditures</h4>
+            </div>
+            <div class="col text-center">
+              <% if @sales_ratio > 0 %>
+                <h3 class="text-success font-weight-bold"><%= number_to_percentage(@sales_ratio, precision: 2) %></h3>
+              <% else %>
+                <h3 class="text-danger font-weight-bold"><%= number_to_percentage(@sales_ratio, precision: 2) %></h3>
+              <% end %>
+              <h4>Cash to sales</h4>
+            </div>
+          </div>  
+        </div>
+      </div>
+    </div>    
+  </div>
+</div>
+
+
+
 
 
 <div class="ml15vw">
   <div class="container">
-    <div class="show-report-title">
-      <h1 class="main-title"><strong class="highlight">Report Analysis</strong></h1>
-    </div>
     <div class="container-index">
-
-      <div class="row">
-        <div class="col-lg-3">
-          <h6>Name of the report : <strong><%= @report.name %></strong> </h6>
-        </div>
-        <div class="col-lg-3">
-          <h6>From : <strong><%= @report.lines.first.ecriture_date.strftime("%d %B %Y") %></strong></h6>
-        </div>
-        <div class="col-lg-3">
-          <h6>To: <strong> <%= @report.lines.treasury_last_day.ecriture_date.strftime("%d %B %Y")%></strong></h6>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-3">
-          <div class="cards-page">
-            <h4> Total <strong class="highlight">Treasury</strong></h4>
-            <h2> <strong class="highlight text-center"><%= number_with_delimiter(@treasury_balance.to_i, :delimiter => ',') %> € </strong></h2>
-            <div class="text-center"><%= link_to "See details", report_treasury_path(@report), class: "btn btn-bleu" %></div>
-          </div>
-        </div>      
-        <div class="col-lg-3">
-          <div class="cards-page">
-            <h4>Total <strong class="highlight">Sales</strong></h4>
-            <h2> <strong class="highlight text-center"><%= number_with_delimiter(@total_sales.to_i, :delimiter => ',') %> € </strong></h2>
-            <div class="text-center"><%= link_to "See details", report_sales_path(@report), class: "btn btn-bleu" %></div>
-          </div>
-        </div>      
-        <div class="col-lg-3">
-          <div class="cards-page">
-            <h4>Total <strong class="highlight">Expenditure</strong></h4>
-            <h2> <strong class="highlight text-center"> <%= number_with_delimiter(@total_expenditures.to_i, :delimiter => ',') %> € </strong></h2>
-            <div class="text-center"><%= link_to "See details", report_expenditures_path(@report), class: "btn btn-bleu" %></div>
-          </div>
-        </div>      
-      </div>
-
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="cards-page">
-            <h4><strong class="highlight-blue text-center">Main ratios</strong></h4>
-            <div class="row d-flex justify-content-center mt-3">
-              <div class="col text-center">
-                <% if @margin > 0 %>
-                  <h3 class="text-success font-weight-bold"><%= number_to_percentage(@margin, precision: 2) %></h3>
-                <% else %>
-                  <h3 class="text-danger font-weight-bold"><%= number_to_percentage(@margin, precision: 2) %></h3>
-                <% end %>
-              <h4>Margin</h4>
-              </div>
-
-              <div class="col text-center">
-                <% if @cash_ratio > 0 %>
-                  <h3 class="text-success font-weight-bold"><%= number_to_percentage(@cash_ratio, precision: 2) %></h3>
-                <% else %>
-                  <h3 class="text-danger font-weight-bold"><%= number_to_percentage(@cash_ratio, precision: 2) %></h3>
-                <% end %>
-                  <h4>Cash to expenditures</h4>
-              </div>
-
-              <div class="col text-center">
-                <% if @sales_ratio > 0 %>
-                  <h3 class="text-success font-weight-bold"><%= number_to_percentage(@sales_ratio, precision: 2) %></h3>
-                <% else %>
-                  <h3 class="text-danger font-weight-bold"><%= number_to_percentage(@sales_ratio, precision: 2) %></h3>
-                <% end %>
-                <h4>Cash to sales</h4>
-              </div>
-            </div>  
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 </div>
