--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -40,15 +40,19 @@
       <div class="signup-card">
         <h4 class="text-center">Welcome to <strong class="highlight">DeciDesk</strong> 👋 </h4>
         <p class="text-center mb-3">Please complete the form below to signup</p>
-     
+
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= f.error_notification %>
-        
+
           <div class="form-inputs">
             <%= f.input :email,
                         required: true,
                         autofocus: true,
                         input_html: { autocomplete: "email" }%>
+            <%= f.input :business,
+                        required: true %>
+            <%= f.input :photo, as: :file,
+                        required: true %>
             <%= f.input :password,
                         required: true,
                         hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
@@ -57,7 +61,7 @@
                         required: true,
                         input_html: { autocomplete: "new-password" } %>
           </div>
-        
+
           <div class="form-actions">
             <div class="btn-nav">
               <%= f.button :submit, "Sign up" %>
@@ -68,7 +72,7 @@
         <div class="mt-3">
           <p>Already have an account 👉 <strong class="highlight"><%= render "devise/shared/links" %></strong></p>
         </div>
-     
+
       </div>
     </div>
   </div>
