--- a/app/assets/stylesheets/components/_pages.scss
+++ b/app/assets/stylesheets/components/_pages.scss
@@ -48,6 +48,15 @@
   font-size: 1rem;
 }
 
+.card-dash-bis {
+  background-color: #EFF5FB;
+  border-radius: 5px;
+  color: $black;
+  margin: 20px 10px;
+  padding: 20px;
+}
+
+
 .card-table p{
   color: black;
   font-size: small;
