--- a/app/views/expenditures/show.html.erb
+++ b/app/views/expenditures/show.html.erb
@@ -7,7 +7,7 @@
     <div class="row">
       <div class="col-12 d-flex justify-content-start">
         <div class="d-flex flex-column" style="max-width: 100%">
-          <div class="d-flex justify-content-between">
+          <div class="d-flex justify-content-between" style="margin-bottom: -50px; margin-top: -30px">
 
             <div class="card-dash-bis p-4 text-start" style="min-width: 70%; color: grey">
             <h4 style="font-size: 1rem">Total Expenditures</h4>
@@ -50,11 +50,11 @@
       <div class="col-7">
         <div class="card-dash-bis">
 
-          <h3 style="margin-bottom: 30px">Top expenditure items this year</h3>
+          <h3 style="margin-bottom: 30px">Top 5 expenditures this year</h3>
           <div class="top-table">
 
             <div class="top-table-row table-row">
-              <div class="table-number">#</div>
+              <div class="table-number">No.</div>
               <div class="table-exp">Expenditure</div>
               <div class="table-date">Date</div>
               <div class="table-amount">Amount</div>
