--- a/app/views/sales/transactions.html.erb
+++ b/app/views/sales/transactions.html.erb
@@ -1,8 +1,9 @@
 <%= render 'shared/side-nav' %>
 <%= render 'shared/tabs', section: :sales %>
 
-<div class="container ml200 mt60">
-  <h3 class="text-center mb-5 mt-5">See all of your sales at a glance</h3>
+<div class="container-decidesk">
+
+  <h3 class="text-center" style= "margin-top: 100px; margin-bottom: 30px">All sales transactions 👎</h3>
 
   <div class="container">
     <div class="container-equal-margin mb-4 p-0">
@@ -11,34 +12,42 @@
       <%= text_field_tag :query,
       params[:query],
       class: "form-control mr-1",
-      placeholder: "Search a date, an amount, a sale..."
+      placeholder: "Search a date, an amount, a transaction..."
       %>
       <%= submit_tag "Search", class: "btn btn-flat m-0" %>
       <% end %>
     </div>
+  </div>
 
-  <table class="table table-hover">
-    <thead "color: grey">
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Sale</th>
-        <th scope="col">Date</th>
-        <th scope="col">Amount</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @lines.each_with_index do |line, index| %>
-        <tr>
-          <th scope="row" span class="badge bg-secondary" style= "color: white"><%= index + 1 %></th>
-          <td><%= line.ecriture_lib %></td>
-          <td><%= line.ecriture_date.strftime("%d %B %Y")%></td>
-          <td>€ <%= number_with_delimiter(line.credit.round(0), :delimiter => ',') %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+   <div class="col-12">
+    <div class="card-dash-bis">
+        <div class="top-table">
+
+          <div class="top-table-row table-row">
+            <div class="table-number">No.</div>
+            <div class="table-exp">Sale</div>
+            <div class="table-date">Date</div>
+            <div class="table-amount">Amount</div>
+          </div>
+
+          <% @lines.each_with_index do |line, index| %>
+            <div class="content-table-row table-row">
+              <div class="table-number"><span><%= index + 1 %></span></div>
+              <div class="table-exp"><%= line.ecriture_lib.capitalize %></div>
+              <div class="table-date"><%= line.ecriture_date%></div>
+              <% if line.debit == 0 %>
+                <div class="table-amount">€ <%= number_with_delimiter(line.credit.round(0), :delimiter => ',') %></div>
+              <% else %>
+                <div class="table-amount" style="color: red">- € <%= number_with_delimiter(line.debit.round(0), :delimiter => ',') %></div>
+              <% end %>
+            </div>
+          <% end %>
+
+        </div>
+    </div>
 
   </div>
 
-  </div>
 </div>
+
+
